--- a/premedia/edetailers/scss/navbar.scss
+++ b/premedia/edetailers/scss/navbar.scss
@@ -1,7 +1,7 @@
 nav {
 	position: fixed;
 	width: 100%;
-	z-index: 9;
+	z-index: 3;
 	
 	.nav-container {
 		margin: 0 auto;
@@ -19,35 +19,11 @@ nav {
 			transition: filter .1s $easeInOut;
 			transition-delay: .4s;
 		}
-
-		.right .nav-item {
-			display: inline-block;
-			margin-left: 1.25em;
-			padding: .25em 0;
-
-			border-bottom: 3px solid $transparent;
-			transition: all .1s $easeInOut;
-			transition-delay: .4s;
-
-			a {
-				font-size: .9em;
-				cursor: pointer;
-				color: #000;
-				text-decoration: none;
-				transition: color .1s $easeInOut;
-				transition-delay: .4s;
-			}
-
-			&.active {
-				border-color: $darkBlue;
-			}
-		}
-
 		&.dark-bg {
 			.left .nav-logo img{
 				filter: brightness(0) invert(1);
 			}
-			.right .nav-item {
+			#navigation-menu .nav-item {
 				a {
 					color: #fff;	
 				}
@@ -55,10 +31,149 @@ nav {
 					border-color: #fff;
 				}
 			}
+			#navigation-menu-mobile.right {
+				input:checked ~span {
+					background: $darkBlue;
+				}
+				span {
+					background: white;
+				}
+			}
 		}
-		&.no-delay {
-			.left .nav-logo img, .right .nav-item, .right .nav-item a {
-				transition-delay: 0s;	
+		@include mobile {
+			// background: white;
+			.left, .right {
+				padding: 0 0;
+			}
+			.right {
+				// padding: 0;
+			}
+		}
+		#navigation-menu {
+			.nav-item {
+				display: inline-block;
+				margin-left: 1.25em;
+				padding: .25em 0;
+
+				border-bottom: 3px solid $transparent;
+				transition: all .1s $easeInOut;
+				transition-delay: .4s;
+
+				a {
+					font-size: .9em;
+					cursor: pointer;
+					color: #000;
+					text-decoration: none;
+					transition: color .1s $easeInOut;
+					transition-delay: .4s;
+				}
+
+				&.active {
+					border-color: $darkBlue;
+				}
+			}
+			&.no-delay {
+				.left .nav-logo img, .right .nav-item, .right .nav-item a {
+					transition-delay: 0s;	
+				}
+			}
+			@include mobile {
+				display: none;
+			}
+		}
+
+		#navigation-menu-mobile {
+			position: relative;
+
+			input {
+				-webkit-appearance: none;
+				display: block;
+				width: 2.5em;
+				height: 2em;
+				position: absolute;
+				cursor: pointer;
+
+				opacity: 0; /* hide this */
+				z-index: 6; /* and place it over the hamburger */
+
+				-webkit-touch-callout: none;
+				&:checked{
+					// opacity: 0;
+					transition: all .3s $easeInOut;
+					& ~.hamburger-line {
+						background: $darkBlue;
+					}
+					& ~.hamburger-line:first-of-type {
+						opacity: 1;
+						transform: rotate(45deg) translate(-2px, -3px);
+					}
+					& ~.hamburger-line:nth-of-type(2) {
+						opacity: 0;
+						transform: rotate(45deg) translate(-5px, 2px);
+					}
+					& ~.hamburger-line:last-of-type {
+						opacity: 1;
+						transform: rotate(-45deg);
+					}
+					& ~ul {
+						opacity: 1;
+						transform: scale(1.0, 1.0);
+					}
+				}
+			}
+			.hamburger-line {
+				display: block;
+				position: relative;
+				width: 2em;
+				height: .25em;
+				margin-bottom: 5px;
+				background: $darkBlue;
+				z-index: 5;
+				transition: all .2s $easeInOut;
+				transition-delay: .3s;
+
+				&:first-of-type {
+					transform-origin: 0% 0%;
+				}
+				&:last-of-type {
+					transform-origin: 0% 100%;
+				}
+			}
+			ul {
+				position: absolute;
+				width: 18em;
+				margin: -3em;
+				padding: 4em 0 0;
+				height: 100vh;
+				right: -1em;
+				z-index: 4;
+				border-left: 2px solid $darkBlue;
+				box-shadow: -15px 0px 50px -8px rgba(0,0,0,0.5);
+
+				background: white;
+				list-style-type: none;
+				-webkit-font-smoothing: antialiased;
+
+				transform: translate(100%, 0);
+				transition: transform .3s $easeInOut;
+				li {
+					margin: 0;
+					font-size: 1.2em;
+					padding: 1em 1.25em 1em;
+					cursor: pointer;
+					span {
+						padding: 0 .25em .25em;
+						border-bottom: 2px solid $transparent;
+						border-color: white;
+					}
+					&.active span{
+						border-color: $darkBlue;
+					}
+				}
+			}
+
+			@include bigger-than-mobile {
+				display: none;
 			}
 		}
 	}
