--- a/premedia/edetailers/scss/style.scss
+++ b/premedia/edetailers/scss/style.scss
@@ -32,9 +32,8 @@ p {
 }
 
 .scroll-snap-container {
-	// height: 100vh;
-	height: calc(var(--vh) * 100);
-	overflow-y: scroll;
+	height: 100vh;
+	overflow-y: auto;
 	scroll-snap-type: y mandatory;
 	.section {
 		display: flex;
@@ -42,6 +41,10 @@ p {
 		align-items: center;
 		padding-top: 3em;
 		scroll-snap-align: start;
+	}
+	@include mobile {
+		scroll-snap-type: y proximity;
+		scroll-snap-type: none;
 	}
 }
 
